--- a/feed.html
+++ b/feed.html
@@ -13,7 +13,7 @@
         }
         .container {
             display: grid;
-            grid-template-columns: 330px 850px;
+            grid-template-columns: 280px 1000px;
             grid-template-rows: 100px 620px;
             gap: 0px 0px; 
             grid-template-areas:
@@ -23,7 +23,7 @@
 
         .side-bar { 
             grid-area: side-bar;
-            width: 330px;
+            width: 280px;
             height: 620px;
             position: relative;
             left: 0;
@@ -46,7 +46,7 @@
         #settings-button{
             display: inline-block;
             text-align: center;
-            margin-left: 115px;
+            margin-left: 70px;
         }
 
         .side-bar bottom{
@@ -73,15 +73,15 @@
             display: grid;
             grid-auto-flow: row;
             overflow-y: scroll;
-            grid-template-columns: 425px 425px;
+            grid-template-columns: 500px 500px;
             grid-template-rows: 310px 310px;
-            grid-auto-columns: 425px;
+            grid-auto-columns: 500px;
             grid-auto-rows: 310px;
         }
 
         .video {
             display: flex;
-            width: 420px;
+            width: 495px;
             height: 305px;
             justify-content: center;
             align-items: center;
@@ -97,8 +97,8 @@
     <body>
         <div class="container">
             <div class="side-bar">
-                <a href="#">Debates</a>
-                <a href="#">Grupos</a>
+                <a href="feed.html">Debates</a>
+                <a href="grupos.html">Grupos</a>
                 <a href="#">Amigos</a>
                 <bottom>
                     <button id="profile-button" class="fa fa-user" style="font-size:35px"></button>
