--- a/amigos.html
+++ b/amigos.html
@@ -18,7 +18,7 @@
             gap: 0px 0px; 
             grid-template-areas:
             "app-logo top-bar"
-            "side-bar feed";
+            "side-bar amigos_container";
         }
 
         .side-bar { 
@@ -68,30 +68,61 @@
             align-items: center;
         }
 
-        .feed { 
-            grid-area: feed;
+        .amigos_container { 
+            grid-area: amigos_container;
             display: grid;
             grid-auto-flow: row;
             overflow-y: scroll;
-            grid-template-columns: 500px 500px;
+            grid-template-columns: 200px 200px 200px 200px 200px;
             grid-template-rows: 310px 310px;
-            grid-auto-columns: 500px;
+            grid-auto-columns: 200px;
             grid-auto-rows: 310px;
         }
 
-        .video {
+        .section {
             display: flex;
-            width: 495px;
-            height: 305px;
+            width: 150px;
+            height: 150px;
             justify-content: center;
             align-items: center;
             border: 5px solid #87b5ff;
             border-radius: 3px;
-            font-size: 2em;
+            font-size: small;
             font-family: sans-serif;
             font-weight: bold;
             background-color: #295eb3;
         }
+
+        .form_popup {
+            display:none;
+            position:absolute;
+            width: 50%;
+            height: 50%;
+            background-color: rgb(132, 146, 141);
+        }
+
+        .form_container {
+            width:80%;
+            margin: 15% auto; /* 15% from the top and centered */
+            padding: 20px;
+        }
+
+        .form_container .btn {
+            color:green;
+        }
+
+        .form_container .cancel {
+            color:red;
+        }
+
+        .form-container input[type=text], .form-container input[type=password] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            border: none;
+            background: #f1f1f1;
+        }
+
 
     </style>
     <body>
@@ -106,20 +137,25 @@
                 </bottom>
             </div>
             <div class="top-bar">
-                <h1>FEED</h1>
+                <h1>Amigos</h1>
             </div>
             <div class="app-logo">
                 <span style='font-size:120px; align-self: center;'>&#9675;</span>
             </div>
-            <div class="feed">
-                <div class="video">Teste 1</div>
-                <video class="video" controls><source src="video_test.mp4" type="video/mp4"></video>
-                <div class="video">Teste 3</div>
-                <div class="video">Teste 4</div>
-                <video class="video" controls><source src="video_test.mp4" type="video/mp4"></video>
-                <div class="video">Teste 6</div>
-                <div class="video">Teste 7</div>
+            <div class="amigos_container" id="amigos_container">
+                <button class="section" onclick="openForm()">Adicionar amigo</button>
+
+                <div class="form_popup" id="form_adicionaramigo">
+                    <form class="form-container" onsubmit="return addAmigo()">
+                        <input id="username" type="text" name="username" placeholder="name">
+                        <input id="email" type="email" name="email" placeholder="email">
+                        <button type="submit">Adicionar amigo</button>
+                    </form>
+                </div>
             </div>
         </div>
+
+        <script src="amigos.js"></script>
+
     </body>
 </html>
