--- a/chamada.html
+++ b/chamada.html
@@ -175,7 +175,7 @@
             <div class="left-bar">
                 <a href="feed.html">Debates</a>
                 <a href="grupos.html">Grupos</a>
-                <a href="#">Amigos</a>
+                <a href="amigos.html">Amigos</a>
             </div>
 
             <div class="left-bar-bottom">
@@ -202,7 +202,14 @@
             <div class="video-bottom">
                 <button style="font-size:24px; display: inline-block; text-align: left;"><i class="fa fa-microphone"></i></button>
                 <button id="camera-button" class="fa fa-camera" style="font-size:24px; display: inline-block; text-align: left;"></button>
-                <button style="font-size:24px; display: inline-block; margin-left: 595px;"><i class="material-icons">fullscreen_exit</i></button>
+                <button style="font-size:24px; display: inline-block; margin-left: 595px;" onclick="voltar_chat()"><i class="material-icons">fullscreen_exit</i></button>
+
+                <script>
+                    function voltar_chat() {
+                        location.href = "chat.html";
+                    }
+                </script>
+
             </div>
 
             <div class="participantes">
