--- a/chamada.html
+++ b/chamada.html
@@ -3,7 +3,7 @@
     <head>
         <title>Chamada</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="Css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -108,6 +108,6 @@
             </div>
             <div class="right_bar_bottom">Opções</div>            
         </div>
-        <script src="main.js"></script>
+        <script src="Javascript/main.js"></script>
     </body>
 </html>
