--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
     <head>
         <title>Chat</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="chat.css">
+        <link rel="stylesheet" href="Css/chat.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -63,7 +63,7 @@
                 </div>
             </section>
         </div>
-        <script src="chat.js"></script>
-        <script src="main.js"></script>
+        <script src="Javascript/chat.js"></script>
+        <script src="Javascript/main.js"></script>
     </body>
 </html>
