--- a/grupos.html
+++ b/grupos.html
@@ -3,7 +3,7 @@
     <head>
         <title>Grupos</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="Css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -29,6 +29,6 @@
                 <i id="group_img" class="fa fa-group" onclick="iniciar_chamada()"><p id="group_text">Debates-123</p></i>
             </div>
         </div>
-        <script src="main.js"></script>
+        <script src="Javascript/main.js"></script>
     </body>
 </html>
