--- a/grupos.html
+++ b/grupos.html
@@ -3,16 +3,16 @@
     <head>
         <title>Grupos</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="Css/main.css">
+        <link rel="stylesheet" href="./Style/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="container_g">
             <div class="side_bar_g">
-                <a href="feed.html">Debates</a>
+                <a href="index.html">Debates</a>
                 <a href="grupos.html">Grupos</a>
-                <a href="amigos.html">Amigos</a>
+                <a href="contactos.html">Contactos</a>
                 <bottom>
                     <btn id="profile-button" class="fa fa-user"></btn>
                     <btn id="settings-button" class="fa fa-cog"></btn>
@@ -22,13 +22,14 @@
                 <h1>Grupos</h1>
             </div>
             <div class="app_logo">
-                Let's talk!
+                <b>Let's talk!</b>
             </div>
             <div class="group">
                 <i id="group_img" class="fa fa-plus-circle"><p id="group_text">Adicionar grupo</p></i>
                 <i id="group_img" class="fa fa-group" onclick="iniciar_chamada()"><p id="group_text">Debates-123</p></i>
+                <i id="group_img" class="fa fa-group" onclick="iniciar_chamada_crimes()"><p id="group_text">Crimes</p></i>
             </div>
         </div>
-        <script src="Javascript/main.js"></script>
+        <script src="./Script/main.js"></script>
     </body>
 </html>
