--- a/chamada.html
+++ b/chamada.html
@@ -129,7 +129,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                 </p>
-                <input type="submit" value="Terminar avaliação e sair da chamada" onclick="voltar_debates()">
+                <input type="submit" value="Confirmar" onclick="voltar_debates()">
                 <input type="submit" value="Cancelar" style="background-color: red;" onclick="close_rating_popup()">
             </div>            
         </div>
