--- a/chamada.html
+++ b/chamada.html
@@ -116,23 +116,24 @@
             <div id="rating_popup">
                 <h1>Avaliação do debate</h1>
                 <p>Avaliação do tópico
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star" id='estrela0'></span>
+                    <span class="fa fa-star" id='estrela1'></span>
+                    <span class="fa fa-star" id='estrela2'></span>
+                    <span class="fa fa-star" id='estrela3'></span>
+                    <span class="fa fa-star" id='estrela4'></span>
                 </p>
                 <p>Avaliação do anfitrião
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star" id='estrela_0'></span>
+                    <span class="fa fa-star" id='estrela_1'></span>
+                    <span class="fa fa-star" id='estrela_2'></span>
+                    <span class="fa fa-star" id='estrela_3'></span>
+                    <span class="fa fa-star" id='estrela_4'></span>
                 </p>
                 <input type="submit" value="Confirmar" onclick="voltar_debates()">
                 <input type="submit" value="Cancelar" style="background-color: red;" onclick="close_rating_popup()">
             </div>            
         </div>
         <script src="./Script/main.js"></script>
+        <script src="./Script/chamada.js"></script>
     </body>
 </html>
