--- a/index.html
+++ b/index.html
@@ -27,24 +27,20 @@
             <div class="feed">
                 <div class="video-call-wrapper">
                     <div class="video-participant">
-                        <a class="name-tag">Andy Will</a>
+                        <a class="category-index">Crime</a>
                         <img class="img_f" src="https://images.unsplash.com/photo-1566821582776-92b13ab46bb4?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-                        <a class="category-tab">Crimes</a>
                       </div>
                       <div class="video-participant">
-                        <a class="name-tag">Emmy Lou</a>
+                        <a class="category-index">Mistério</a>
                         <img class="img_f" src="https://images.unsplash.com/photo-1500917293891-ef795e70e1f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="participant">
-                        <a class="category-tab">Política</a>
                       </div>
                       <div class="video-participant">
-                        <a class="name-tag">Tim Russel</a>
+                        <a class="category-index">Policial</a>
                         <img class="img_f" src="https://images.unsplash.com/photo-1576110397661-64a019d88a98?ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                        <a class="category-tab">Mistério</a>
                       </div>
                       <div class="video-participant">
-                        <a class="name-tag">Jessica Bell</a>
+                        <a class="category-index">Política</a>
                         <img class="img_f" src="https://images.unsplash.com/photo-1600207438283-a5de6d9df13e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                        <a class="category-tab">Policial</a>
                       </div>
                 </div>
             </div>
