--- a/chamada.html
+++ b/chamada.html
@@ -10,7 +10,6 @@
     <body>
         <div class="container_chamada">
             <div class="left_bar_c">
-                <a href="index.html">Debates</a>
                 <a href="grupos.html">Grupos</a>
                 <a href="contactos.html">Contactos</a>
             </div>
@@ -20,62 +19,15 @@
                 <btn id="settings-button" class="fa fa-cog"></btn>
             </div>
 
-            <div class="top_bar_c" id="nome_grupo">Debates-123</div>
+            <div class="top_bar_c" id="nome_grupo"></div>
 
             <div class="app_logo">
                 <b>Let's talk!</b>
             </div>
 
             <div class="video-area">
-                <div class="video-call-wrapper_c">
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                        <a class="name-tag">Andy Will</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1566821582776-92b13ab46bb4?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-                    </div>
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                        <a class="name-tag">Emmy Lou</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1500917293891-ef795e70e1f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="participant">
-                    </div>
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                        <a class="name-tag">Tim Russel</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1576110397661-64a019d88a98?ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                    </div>
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                        <a class="name-tag">Jessica Bell</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1600207438283-a5de6d9df13e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                    </div>
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                       <a class="name-tag">Ryan Patrick</a>
-                       <img class="img_f" src="https://images.unsplash.com/photo-1581824283135-0666cf353f35?ixlib=rb-1.2.1&auto=format&fit=crop&w=1276&q=80" alt="participant">
-                    </div>
-                    <div class="video-participant_c">
-                        <div class="participant-actions">
-                            <btn class="fa fa-microphone-slash"></btn>
-                            <btn class="fa fa-camera"></btn>
-                        </div>
-                       <a class="name-tag">Tina Cate</a>
-                       <img class="img_f" src="https://images.unsplash.com/photo-1542596594-649edbc13630?ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                    </div>
+                <div class="video-call-wrapper_c" id="vc">
+                    
                 </div>
             </div>
 
@@ -86,24 +38,14 @@
             </div>
 
             <div class="participantes">
-                <ul>
+                <ul id="participantes_list">
                     <li id="participantestop">Participantes</li>
-                    <li><i class="fa fa-user"></i> Andy Will</li>
-                    <li><i class="fa fa-user"></i> Emmy Lou</li>
-                    <li><i class="fa fa-user"></i> Jessica Bell</li>
-                    <li><i class="fa fa-user"></i> Ryan Patrick</li>
-                    <li><i class="fa fa-user"></i> Tim Russel</li>
-                    <li><i class="fa fa-user"></i> Tina Cate</li>
-                    <li id="participantesbottom">Adicionar amigo <i class="fa fa-plus"></i></li>
                 </ul>
             </div>
 
             <div class="lista-espera">
-                <ul>
+                <ul id="lista-espera">
                     <li id="lista-espera-top">Lista de espera</li>
-                    <li><i class="fa fa-user"></i> Emmy Lou</li>
-                    <li><i class="fa fa-user"></i> Tina Cate</li>
-                    <li id="lista-espera-bottom">Participar <i class="fa fa-hand-paper-o"></i></li>
                 </ul>
             </div>
             <button class="right_bar_bottom">
