--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
     <head>
-        <title>Debates</title>
+        <title>Let's talk!</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./Style/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,6 @@
     <body>
         <div class="container_f">
             <div class="side_bar_f">
-                <a href="index.html">Debates</a>
                 <a href="grupos.html">Grupos</a>
                 <a href="contactos.html">Contactos</a>
                 <bottom>
@@ -19,30 +18,11 @@
                 </bottom>
             </div>
             <div class="top_bar_f">
-                <h1>Debates</h1>
             </div>
             <div class="app_logo">
                 <b>Let's talk!</b>
             </div>
             <div class="feed">
-                <div class="video-call-wrapper">
-                    <div class="video-participant">
-                        <a class="category-index">Crime</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1566821582776-92b13ab46bb4?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-                      </div>
-                      <div class="video-participant">
-                        <a class="category-index">Mistério</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1500917293891-ef795e70e1f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt="participant">
-                      </div>
-                      <div class="video-participant">
-                        <a class="category-index">Policial</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1576110397661-64a019d88a98?ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                      </div>
-                      <div class="video-participant">
-                        <a class="category-index">Política</a>
-                        <img class="img_f" src="https://images.unsplash.com/photo-1600207438283-a5de6d9df13e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80" alt="participant">
-                      </div>
-                </div>
             </div>
         </div>
         <script src="./Script/main.js"></script>
