--- a/contactos.html
+++ b/contactos.html
@@ -11,8 +11,8 @@
     <body>
         <div class="container_g">
             <div class="side_bar_g">
-                <a href="grupos.html">Grupos</a>
-                <a href="contactos.html">Contactos</a>
+                <a href="contactos.html" id="side_contactos">Contactos</a>
+                <a href="grupos.html" id="side_grupos">Grupos</a>
                 <bottom>
                     <btn id="profile-button" class="fa fa-user"></btn>
                     <btn id="settings-button" class="fa fa-cog"></btn>
