--- a/grupos.html
+++ b/grupos.html
@@ -21,7 +21,7 @@
             <div class="top_bar_g">
                 <h1>Grupos</h1>
             </div>
-            <div class="app_logo">
+            <div class="app_logo" onclick="voltar_index()">
                 <b>Let's talk!</b>
             </div>
             <div class="group" id="displaygrupos">
