--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="top_bar_f">
             </div>
-            <div class="app_logo">
+            <div class="app_logo" onclick="voltar_index()">
                 <b>Let's talk!</b>
             </div>
             <div class="feed">
