--- a/chamada.html
+++ b/chamada.html
@@ -21,7 +21,7 @@
 
             <div class="top_bar_c" id="nome_grupo"></div>
 
-            <div class="app_logo">
+            <div class="app_logo" onclick="voltar_index()">
                 <b>Let's talk!</b>
             </div>
 
