--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
                     <btn class="fa fa-phone"></btn>
                 </div>
             </div>
-            <div class="app_logo">
+            <div class="app_logo" onclick="voltar_index()">
                 <b>Let's talk!</b>
             </div>
             <div class="right_bar_chat">
