--- a/contactos.html
+++ b/contactos.html
@@ -21,7 +21,7 @@
             <div class="top_bar_g">
                 <h1>Contactos</h1>
             </div>
-            <div class="app_logo">
+            <div class="app_logo" onclick="voltar_index()">
                 <b>Let's talk!</b>
             </div>
             <div class="group" id="displayContacts">
@@ -33,9 +33,9 @@
                     <label for="nome">Nome</label>
                     <input type="text" id="nome" name="nome" placeholder="Nome">
                     <label for="telemovel">Telemóvel</label>
-                    <input type="tel" pattern="[0-9]{9}" id="telemovel" name="telemovel" placeholder="987654321">
+                    <input type="tel" id="telemovel" name="telemovel" placeholder="987654321">
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" placeholder="teste@gmail.com">
+                    <input type="email" id="email" name="email" placeholder="mail@mail.com">
                 </form>
                     <input type="submit" value="Adicionar" onclick="addNewContact()">
                     <input type="submit" value="Cancelar" style="background-color: red;" onclick="close_adicionar_contacto_popup()">
