--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <b>Let's talk!</b>
             </div>
             <div class="feed">
+                <i id ="group_img" class="fa fa-folder"><p id ="pastas">Crimes</p></i>
+                <i id ="group_img" class="fa fa-folder"><p id ="pastas">Política</p></i>
             </div>
         </div>
         <script src="./Script/main.js"></script>
